# analysis

./: .gitignore  LICENSE  README.md  TODO.md  env.yml  env2.yml  env_oasis.yml  environment.yml  pyproject.toml  s2p_ops.py  setup.py
extras/: bash_and_git_snippets.sh  python_snippets.py  python_test_code.py
holofun/: __init__.py  analysis.py  caiman_utils.py  constants.py  daq.py  deconvolution.py  epochs.py  holography.py  io.py  models.py  motion.py  motion_utils.py  movies.py  online.py  pipelines.py  plots.py  roi.py  s2p.py  si_tiff.py  simple_guis.py  stats.py  tiff_readers.py  tiffs.py  traces.py  utils.py  vis.py  whole_cell.py
holofun/vis/: __init__.py  crf.py  generic.py  gratings.py  retinotopy.py  tuning.py  vis_depr.py  vonmises.py
scripts/: cell_clicker.py  data_mover.py  data_mover_cli.py  getdata  img_viewer.py  new_cell_clicker.py  new_new_clicker.py  new_run_s2p.py  run_caiman_batch.py  run_caiman_onacid.py  run_caiman_onacid_stream.py  run_caiman_seeded.py  run_s2p.py  run_s2p_8m.py  run_s2p_ai203.py  run_s2p_pipeline.py  tiff_checker.py  tiffchecker.py  time_and_cell_clicker.py
tests/: test_daq.py  test_gpu.py  test_install.py  test_suite2p.py  test_tiffs.py
