[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holofun"
version = "0.2.1"
description = "Holography and 2-photon calcium imaging analysis."
authors = [
    {name = "Will Hendricks", email = "hendricksw@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]